tests/chapter_8/invalid_parse/extra_credit/switch_case_declaration.c
int main(void) {
    switch(3) {
        case 3:
            int i = 0;
            return i;
    }
    return 0;
}